# s027

2016SAMURAI.s027/: Makefile  Makefile.in  config.status  configure  configure.in  libtool  setup.sh~
2016SAMURAI.s027/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
2016SAMURAI.s027/include/: EAnalyser.hh  TAlEncSILICONSExample.hh  TArtHIMEPla.hh  TArtPPACPara.hh  TArtSAMURAIParameters.hh  segidlist.hh
2016SAMURAI.s027/lib/: anacatana_dict_rdict.pcm  anacore_dict_rdict.pcm  analoopencexample_dict_rdict.pcm  analoopexample_dict_rdict.pcm  ananadeko_dict_rdict.pcm  anawinds_dict_rdict.pcm  libanabrips.la  libanabrips.so.0.0.0  libanacore.so.0.0.0  libanadali.la  libanadali.so.0.0.0  libanaespri.la  libanaespri.so.0.0.0  libanaloop.la  libanaloopencexample.la  libananadeko.la  libanaroot.la  libanaroot.so.0.0.0  libanasamurai.la  libanasilicons.la  libanasilicons.so.0.0.0  libanawinds.la  libanawinds.so.0.0.0
2016SAMURAI.s027/sources/: Makefile  Makefile.in  libanaroot.la
2016SAMURAI.s027/sources/.libs/: libanaroot.so.0.0.0
2016SAMURAI.s027/sources/AnaLoop/: Makefile  (+1 more)
2016SAMURAI.s027/sources/Reconstruction/ESPRI/: Makefile  Makefile.am  Makefile.in  anaespri_dict.cc  anaespri_dict.lo  anaespri_dict_rdict.pcm  anaespri_linkdef.hh  libanaespri.la
2016SAMURAI.s027/sources/Reconstruction/ESPRI/.deps/: anaespri_dict.Plo
2016SAMURAI.s027/sources/Reconstruction/ESPRI/include/: TArtFADCPara.hh~  TArtPlasPara.hh~  TArtRNaIPara.hh~  TArtTDCHitPara.hh~
2016SAMURAI.s027/sources/Reconstruction/ESPRI/src/: TArtCalibDia.cc  TArtESPRIParameters.cc~
(+107 files in other folders)
